# floff

./: CMakeLists.txt  README.md
include/floff/: floff.h
subproject/benchmark/: CMakeLists.txt
subproject/benchmark/include/: benchmark.h
subproject/benchmark/matlab/: plot_fixed_precision_benchmark.m
subproject/benchmark/results/: to_chars_fixed_precision_benchmark_binary64.csv
subproject/benchmark/source/: benchmark.cpp  floff.cpp  fmt.cpp  ryu_printf.cpp
subproject/common/: CMakeLists.txt
subproject/common/include/: big_uint.h  random_float.h
subproject/common/source/: big_uint.cpp
subproject/meta/: CMakeLists.txt
subproject/meta/results/: binary64_generated_extended_cache_compact.txt  binary64_generated_extended_cache_long.txt  binary64_generated_extended_cache_super_compact.txt  test.txt
subproject/meta/source/: generate_cache.cpp  live_test.cpp  sandbox.cpp
subproject/test/: CMakeLists.txt
subproject/test/source/: float_exhaustive.cpp
